[package]
name = "voxelframe_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
lazy_static = "1.4.0"
arrayvec = "0.7.1"
protobuf = { version = "2", features = ["with-bytes"] }
byteorder = "1.3.2"

[build-dependencies]
protobuf-codegen-pure = "2.14"
